<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1667"
            android:textSize="45sp"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:text="@string/_0" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6667">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

                <Button
                    android:id="@+id/Clear"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/ChangeSign"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/PlusMinus" />

                <Button
                    android:id="@+id/Percentage"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/Percentage" />

                <Button
                    android:id="@+id/Divide"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/Slash" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <Button
                    android:id="@+id/Btn1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/Btn2"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/Btn3"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/Multiply"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/Multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <Button
                    android:id="@+id/Btn4"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/Btn5"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/Btn6"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/Minus"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/Minus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25">

                <Button
                    android:id="@+id/Btn7"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/Btn8"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/Btn9"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/Plus"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.25"
                    android:textSize="30sp"
                    android:onClick="onClick"
                    android:text="@string/Plus" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1667"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:textSize="30sp"
                android:onClick="onClick"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:textSize="30sp"
                android:onClick="onClick"
                android:text="@string/Dot" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:textSize="30sp"
                android:onClick="onClick"
                android:text="@string/Equals" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>